Make preparations for NativeAOT

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <LangVersion>8.0</LangVersion>
+    <WinFormsRepoRoot></WinFormsRepoRoot>
   </PropertyGroup>
 
   <PropertyGroup>
