--- a/MetroFramework.Demo/MetroFramework.Demo.csproj
+++ b/MetroFramework.Demo/MetroFramework.Demo.csproj
@@ -1,25 +1,25 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="Current">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFrameworks>net2.0;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <IsTestProject>false</IsTestProject>
     <IsPackable>false</IsPackable>
     <RootNamespace>MetroFramework.Demo</RootNamespace>
     <AssemblyName>MetroFramework.Demo</AssemblyName>
     <Authors>Peter Rekdal Sunde / Sven Walters</Authors>
     <Version>1.0.0</Version>
-    <UseWinforms>true</UseWinforms>
+    <UseWindowsForms Condition="'$(WinFormsRepoRoot)' == ''">true</UseWindowsForms>
+    <BuiltInComInteropSupport Condition="'$(WinFormsRepoRoot)' != ''">false</BuiltInComInteropSupport>
   </PropertyGroup>
-  <ItemGroup Condition="$(IsNetFullFramework)">
-    <Reference Include="System" />
-    <Reference Include="System.Design" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MetroFramework\MetroFramework.csproj" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(WinFormsRepoRoot)' != ''">
+    <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="7.0.0-*" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(WinFormsRepoRoot)' != ''">
+    <Reference Include="$(WinFormsRepoRoot)\artifacts\bin\System.Windows.Forms\Debug\net7.0\System.Windows.Forms.dll" />
+    <Reference Include="$(WinFormsRepoRoot)\artifacts\bin\System.Windows.Forms.Primitives\Debug\net7.0\System.Windows.Forms.Primitives.dll" />
   </ItemGroup>
 </Project>
