--- a/MetroFramework/MetroFramework.csproj
+++ b/MetroFramework/MetroFramework.csproj
@@ -1,14 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net2.0;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <IsTestProject>false</IsTestProject>
     <IsPackable>true</IsPackable>
     <RootNamespace>MetroFramework</RootNamespace>
     <AssemblyName>MetroFramework</AssemblyName>
     <Authors>Peter Rekdal Sunde / Sven Walters</Authors>
     <Version>2.0.0</Version>
-    <UseWindowsForms>true</UseWindowsForms>
+    <UseWindowsForms Condition="'$(WinFormsRepoRoot)' == ''">true</UseWindowsForms>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>ModernUI</PackageId>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -27,15 +27,15 @@
       Windows 10 (.NET CORE)
     </Description>
   </PropertyGroup>
-  <ItemGroup Condition="$(IsNetCoreApp)">
-    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
+  <ItemGroup>
+    <PackageReference Include="System.Resources.Extensions" Version="7.0.0-*" />
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0-*" />
+    <PackageReference Include="System.CodeDom" Version="7.0.0-*" />
   </ItemGroup>
-  <ItemGroup Condition="$(IsNetFullFramework)">
-    <Reference Include="System" />
-    <Reference Include="System.Design" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+
+  <ItemGroup Condition="'$(WinFormsRepoRoot)' != ''">
+    <Reference Include="$(WinFormsRepoRoot)\artifacts\bin\System.Windows.Forms\Debug\net7.0\System.Windows.Forms.dll" />
+    <Reference Include="$(WinFormsRepoRoot)\artifacts\bin\System.Windows.Forms.Primitives\Debug\net7.0\System.Windows.Forms.Primitives.dll" />
+    <Reference Include="$(WinFormsRepoRoot)\artifacts\bin\System.Windows.Forms.Design\Debug\net7.0\System.Windows.Forms.Design.dll" />
   </ItemGroup>
 </Project>
